abilty wheel qa + polish

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,14 +103,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/Area1-Rework
+MRUItem0=/Game/Levels/Area1-Rework
+MRUItem1=/Game/Levels/MainMenu
 MRUItem2=/Game/Levels/Area2-MarketMeshStart
-MRUItem3=/Game/Levels/texturedzoo
-MRUItem4=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem5=/Game/Levels/Demo
-MRUItem6=/Game/b024899h/ParticleEffectsTest
-MRUItem7=/Game/Levels/Area2-Market
+MRUItem3=/Game/Levels/Area2-Market
+MRUItem4=/Game/Levels/texturedzoo
+MRUItem5=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem6=/Game/Levels/Demo
+MRUItem7=/Game/b024899h/ParticleEffectsTest
 MRUItem8=/Game/Levels/MechanicsLevel
 MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
 MRUItem10=/Game/Levels/TerrainMap
@@ -310,12 +310,15 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Area1-Rework
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 None=======
-OpenAssetsAtExit=/Game/Chloe/UI/Start_Menu.Start_Menu
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
+OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
+OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3212,6 +3215,66 @@ BossAI_C.Pawn=True
 BossAI_C.Input=True
 BossAI_C.Actor=True
 Actor.Rendering=True
+HoundEnemyAI_C.TransformCommon=True
+HoundEnemyAI_C.Animation=True
+HoundEnemyAI_C.Mesh=True
+HoundEnemyAI_C.Stats=True
+HoundEnemyAI_C.Default=True
+HoundEnemyAI_C.Physics=True
+HoundEnemyAI_C.Collision=True
+HoundEnemyAI_C.Lighting=True
+HoundEnemyAI_C.Clothing=True
+HoundEnemyAI_C.ClothingSimulation=True
+HoundEnemyAI_C.Rendering=True
+HoundEnemyAI_C.Tags=True
+HoundEnemyAI_C.Activation=True
+HoundEnemyAI_C.Cooking=True
+HoundEnemyAI_C.Character Movement: Jumping / Falling=True
+HoundEnemyAI_C.Character Movement (General Settings)=True
+HoundEnemyAI_C.Character Movement: Walking=True
+HoundEnemyAI_C.Character Movement: Swimming=True
+HoundEnemyAI_C.Character Movement: Flying=True
+HoundEnemyAI_C.Character Movement: Custom Movement=True
+HoundEnemyAI_C.Character Movement (Rotation Settings)=True
+HoundEnemyAI_C.Character Movement: Physics Interaction=True
+HoundEnemyAI_C.Character Movement (Networking)=True
+HoundEnemyAI_C.Character Movement=True
+HoundEnemyAI_C.Character Movement: Avoidance=True
+HoundEnemyAI_C.Character Movement: NavMesh Movement=True
+HoundEnemyAI_C.RootMotion=True
+HoundEnemyAI_C.NavMovement=True
+HoundEnemyAI_C.Velocity=True
+HoundEnemyAI_C.PlanarMovement=True
+HoundEnemyAI_C.MovementComponent=True
+HoundEnemyAI_C.Shape=True
+HoundEnemyAI_C.Navigation=True
+HoundEnemyAI_C.Character=True
+HoundEnemyAI_C.Camera=True
+HoundEnemyAI_C.Pawn=True
+HoundEnemyAI_C.Input=True
+HoundEnemyAI_C.Actor=True
+HoundEnemyAI_C.Materials=True
+HoundEnemyAI_C.Tick=True
+HoundEnemyAI_C.ComponentTick=True
+HoundEnemyAI_C.Status=True
+HoundEnemyAI_C.Bleed=True
+HoundEnemyAI_C.Stun=True
+HoundEnemyAI_C.Crystalise=True
+HoundEnemyAI_C.Blind=True
+HoundEnemyAI_C.Poison=True
+HoundEnemyAI_C.LifeSteal=True
+HoundEnemyAI_C.Drop=True
+HoundEnemyAI_C.ComponentReplication=True
+HoundEnemyAI_C.Variable=True
+HoundEnemyAI_C.Replication=True
+HoundEnemyAI_C.Sockets=True
+HoundEnemyAI_C.Events=True
+EnteredBossArea_C.TransformCommon=True
+EnteredBossArea_C.Default=True
+EnteredBossArea_C.Rendering=True
+EnteredBossArea_C.Input=True
+EnteredBossArea_C.Actor=True
+TopDownCharacter_C.EquipmentRefs=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3397,14 +3460,14 @@ None=======
 /Game/Movies/UE4_Logo_test.UE4_Logo_test=1
 /Game/Movies/MenuMediaPlayer_Video.MenuMediaPlayer_Video=0
 /Game/Movies/MainMenuFinal.MainMenuFinal=1
+/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI=0
 
 [PluginBrowser]
-InstalledPlugins=DialoguePlugin
-InstalledPlugins=ParticleText
+InstalledPlugins=Substance
 
 [DetailPropertyExpansion]
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.CapsuleHalfHeight\" \"Object.CapsuleHalfHeight\" "
 PrimitiveComponent=
@@ -3470,17 +3533,17 @@ GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
 GeomModifier="\"Object.Settings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PlayerController=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.NormalPadding\" \"Object.Appearance.WidgetStyle.PressedPadding\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.Margin\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Ability_Wheel_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HUD_Proto_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HybridController_C="\"Object.Default.DebugColour\" "
 BehaviorTreeGraphNode_Root=
@@ -3548,6 +3611,7 @@ ParticleModule="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Objec
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 BossAI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+HoundEnemyAI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4346,7 +4410,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4375,8 +4439,12 @@ LastLogListing=LightingResults
 /Game/Models/Armour/BronzeHalfHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 /Game/Models/Armour/BronzeFullHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
 /Game/Models/Armour/LeatherCowlHelmet=(R=0.000000,G=0.500000,B=0.079121,A=1.000000)
+/Game/Widgets=(R=0.500000,G=0.000000,B=0.386934,A=1.000000)
 
 [PlacementMode]
+RecentlyPlaced=/Game/H011646h/Crystals/NewFolder/WallWithStairs.WallWithStairs;
+RecentlyPlaced=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI;
+RecentlyPlaced=/Game/AIAgent/BaseAI.BaseAI;
 RecentlyPlaced=/Game/Models/Dylan/ExposedCrystal_2_Dylan_10-01-19.ExposedCrystal_2_Dylan_10-01-19;
 RecentlyPlaced=/Game/Models/Dylan/ExposedCrystal_1_Dylan_10-01-19.ExposedCrystal_1_Dylan_10-01-19;
 RecentlyPlaced=/Game/Foliage/Crystals/ExposedCrystalstrange.ExposedCrystalstrange;
@@ -4394,9 +4462,6 @@ RecentlyPlaced=/Game/b024899h/Particle_Effects/Whirlwind/Whirlwind_PE.Whirlwind_
 RecentlyPlaced=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave;
 RecentlyPlaced=/Game/Movies/Area1_FlyOver1.Area1_FlyOver1;
 RecentlyPlaced=/Game/AssetZoo_Flyover1.AssetZoo_Flyover1;
-RecentlyPlaced=/Script/CinematicCamera.CineCameraActor;
-RecentlyPlaced=/Game/cloth_head_wrap.cloth_head_wrap;
-RecentlyPlaced=/Game/Models/finishedassets/table/Table.Table;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bUseUnsortedMenus=False
@@ -4451,26 +4516,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Movies/MainMenuFinal
-MRUItem1=/Game/Chloe/UI/Start_Menu
+MRUItem0=/Game/AIAgent/BossAI
+MRUItem1=/Game/Levels/Area1-Rework
 MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Movies/MenuMediaPlayer_Video
-MRUItem4=/Game/Levels/Area1-Rework
-MRUItem5=/Game/Levels/Area2-MarketMeshStart
-MRUItem6=/Game/Levels/texturedzoo
-MRUItem7=/Game/Movies/MenuVideo1
-MRUItem8=/Game/Movies/MenuMediaPlayer
-MRUItem9=/Game/Movies/UE4_Logo_test
-MRUItem10=/Game/b024899h/Particle_Effects/Hurricane/Swing_P
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem12=/Game/AIAgent/BaseAI
-MRUItem13=/Game/Widgets/Ability_Wheel
-MRUItem14=/Game/Movies/NewMediaPlayer_Video
-MRUItem15=/Game/Movies/NewMediaPlayer
-MRUItem16=/Game/Movies/MainMenuVideo1
-MRUItem17=/Game/Movies/mp4texturedzoo__2_
-MRUItem18=/Game/Movies/Area1_MediaPlayer
-MRUItem19=/Game/Movies/Area1_MediaPlayer_Video
+MRUItem3=/Game/AIAgent/Proto_controller
+MRUItem4=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem5=/Game/Widgets/Ability_Wheel
+MRUItem6=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem7=/Game/Levels/Area2-MarketMeshStart
+MRUItem8=/Game/Levels/Area2-Market
+MRUItem9=/Game/Movies/MainMenuFinal
+MRUItem10=/Game/Chloe/UI/Start_Menu
+MRUItem11=/Game/Movies/MenuMediaPlayer_Video
+MRUItem12=/Game/Levels/texturedzoo
+MRUItem13=/Game/Movies/MenuVideo1
+MRUItem14=/Game/Movies/MenuMediaPlayer
+MRUItem15=/Game/Movies/UE4_Logo_test
+MRUItem16=/Game/b024899h/Particle_Effects/Hurricane/Swing_P
+MRUItem17=/Game/AIAgent/BaseAI
+MRUItem18=/Game/Movies/NewMediaPlayer_Video
+MRUItem19=/Game/Movies/NewMediaPlayer
 
 [WidgetTemplatesExpanded]
 Extra=False
