Top down character fix

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -311,6 +311,9 @@ LastLevel=/Game/Levels/MainMenu
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
+OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
+OpenAssetsAtExit=/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3047,6 +3050,15 @@ Emitter.Activation=True
 Emitter.Cooking=True
 Emitter.Emitter=True
 Emitter.Actor=True
+REINST_TopDownCharacter_C_173.None=True
+REINST_TopDownCharacter_C_173.Tick=True
+REINST_TopDownCharacter_C_173.Character=True
+REINST_TopDownCharacter_C_173.Camera=True
+REINST_TopDownCharacter_C_173.Pawn=True
+REINST_TopDownCharacter_C_173.Rendering=True
+REINST_TopDownCharacter_C_173.Replication=True
+REINST_TopDownCharacter_C_173.Input=True
+REINST_TopDownCharacter_C_173.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3250,7 +3262,7 @@ AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Percept
 TestPawn_C="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 NewController_C="\"Object.Controller.Controller"
 AIController="\"Object.Default.DebugColour\" "
-Controller="\"Object.Default.DebugColour\" "
+Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
 TopDownCharacter_C=
@@ -3385,7 +3397,7 @@ FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 [Directories2]
 UNR=../../../../../../Users/c024816h/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
 UNR=../../../../../../Users/s017290g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/TopDownBP/Maps
-UNR=../../../../../../Users/t019847g/Documents/GitHub/SCollab-Proto/SP_Prototype/Content/Levels
+UNR=../../../../../My Documents/Github/SCollab-Proto/SP_Prototype/Content/Levels
 None=======
 None=======
 BRUSH=../../../../../My Documents/Unreal Projects/SP_Prototype/Content/
@@ -4070,10 +4082,10 @@ AnimationBlueprintEditor.TimeStamp=2018.09.20-07.56.05
 AnimationBlueprintEditor.LastCompileMethod=Unknown
 PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
-ApexDestruction.TimeStamp=2018.09.20-07.58.59
-ApexDestruction.LastCompileMethod=Unknown
-ApexDestructionEditor.TimeStamp=2018.09.20-07.58.59
-ApexDestructionEditor.LastCompileMethod=Unknown
+ApexDestruction.TimeStamp=2018.12.14-12.14.12
+ApexDestruction.LastCompileMethod=External
+ApexDestructionEditor.TimeStamp=2018.12.14-12.14.12
+ApexDestructionEditor.LastCompileMethod=External
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -4230,16 +4242,16 @@ PreserveScaleRatio=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem2=/Game/AIAgent/BaseAI
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
-MRUItem4=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem5=/Game/Levels/Area2-MarketMeshStart
-MRUItem6=/Game/AIAgent/Proto_controller
-MRUItem7=/Game/AIAgent/ProtoTree
-MRUItem8=/Game/Levels/Demo
-MRUItem9=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem10=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem1=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem2=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem4=/Game/AIAgent/BaseAI
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem6=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem7=/Game/Levels/Area2-MarketMeshStart
+MRUItem8=/Game/AIAgent/Proto_controller
+MRUItem9=/Game/AIAgent/ProtoTree
+MRUItem10=/Game/Levels/Demo
 MRUItem11=/Game/TopDownBP/Blueprints/I_DeathSystem
 MRUItem12=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
 MRUItem13=/Game/Josh/Skinned_Player_Skeleton
