Top down character

--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -105,12 +105,12 @@ CurrentPosGridSize=4
 CurrentRotGridMode=GridMode_DivisionsOf360
 
 [MRU]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/Levels/Area2-MarketMeshStart
-MRUItem2=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem3=/Game/Levels/Demo
-MRUItem4=/Game/b024899h/ParticleEffectsTest
-MRUItem5=/Game/Levels/Area1-Rework
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/Levels/Area1-Rework
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem4=/Game/Levels/Demo
+MRUItem5=/Game/b024899h/ParticleEffectsTest
 MRUItem6=/Game/Levels/Area2-Market
 MRUItem7=/Game/Levels/texturedzoo
 MRUItem8=/Game/Levels/MechanicsLevel
@@ -283,7 +283,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -306,14 +306,17 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Area2-MarketMeshStart
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor
 OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/PlayerControl.PlayerControl
-OpenAssetsAtExit=/Game/TopDownBP/Interfaces/PlayerInt.PlayerInt
+OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
+OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
+OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3059,6 +3062,81 @@ REINST_TopDownCharacter_C_173.Rendering=True
 REINST_TopDownCharacter_C_173.Replication=True
 REINST_TopDownCharacter_C_173.Input=True
 REINST_TopDownCharacter_C_173.Actor=True
+CheckpointMarker_C.TransformCommon=True
+CheckpointMarker_C.Default=True
+CheckpointMarker_C.Rendering=True
+CheckpointMarker_C.Input=True
+CheckpointMarker_C.Actor=True
+HoundEnemyAI_C.TransformCommon=True
+HoundEnemyAI_C.Animation=True
+HoundEnemyAI_C.Mesh=True
+HoundEnemyAI_C.Stats=True
+HoundEnemyAI_C.Default=True
+HoundEnemyAI_C.Physics=True
+HoundEnemyAI_C.Collision=True
+HoundEnemyAI_C.Lighting=True
+HoundEnemyAI_C.Clothing=True
+HoundEnemyAI_C.ClothingSimulation=True
+HoundEnemyAI_C.Rendering=True
+HoundEnemyAI_C.Tags=True
+HoundEnemyAI_C.Activation=True
+HoundEnemyAI_C.Cooking=True
+HoundEnemyAI_C.Character Movement: Jumping / Falling=True
+HoundEnemyAI_C.Character Movement (General Settings)=True
+HoundEnemyAI_C.Character Movement: Walking=True
+HoundEnemyAI_C.Character Movement: Swimming=True
+HoundEnemyAI_C.Character Movement: Flying=True
+HoundEnemyAI_C.Character Movement: Custom Movement=True
+HoundEnemyAI_C.Character Movement (Rotation Settings)=True
+HoundEnemyAI_C.Character Movement: Physics Interaction=True
+HoundEnemyAI_C.Character Movement (Networking)=True
+HoundEnemyAI_C.Character Movement=True
+HoundEnemyAI_C.Character Movement: Avoidance=True
+HoundEnemyAI_C.Character Movement: NavMesh Movement=True
+HoundEnemyAI_C.RootMotion=True
+HoundEnemyAI_C.NavMovement=True
+HoundEnemyAI_C.Velocity=True
+HoundEnemyAI_C.PlanarMovement=True
+HoundEnemyAI_C.MovementComponent=True
+HoundEnemyAI_C.Shape=True
+HoundEnemyAI_C.Navigation=True
+HoundEnemyAI_C.Character=True
+HoundEnemyAI_C.Camera=True
+HoundEnemyAI_C.Pawn=True
+HoundEnemyAI_C.Input=True
+HoundEnemyAI_C.Actor=True
+HoundEnemyAI_C.Materials=True
+BossAI_C.Tick=True
+BossAI_C.Default=True
+BossAI_C.Stats=True
+BossAI_C.Status=True
+BossAI_C.Bleed=True
+BossAI_C.Stun=True
+BossAI_C.Crystalise=True
+BossAI_C.Blind=True
+BossAI_C.Poison=True
+BossAI_C.LifeSteal=True
+BossAI_C.Drop=True
+BossAI_C.Character=True
+BossAI_C.Camera=True
+BossAI_C.Pawn=True
+BossAI_C.Rendering=True
+BossAI_C.Replication=True
+BossAI_C.Input=True
+BossAI_C.Actor=True
+HoundEnemyAI_C.Tick=True
+HoundEnemyAI_C.ComponentTick=True
+HoundEnemyAI_C.Status=True
+HoundEnemyAI_C.Bleed=True
+HoundEnemyAI_C.Stun=True
+HoundEnemyAI_C.Crystalise=True
+HoundEnemyAI_C.Blind=True
+HoundEnemyAI_C.Poison=True
+HoundEnemyAI_C.LifeSteal=True
+HoundEnemyAI_C.Drop=True
+HoundEnemyAI_C.ComponentReplication=True
+HoundEnemyAI_C.Variable=True
+HoundEnemyAI_C.Replication=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3265,7 +3343,7 @@ AIController="\"Object.Default.DebugColour\" "
 Controller=
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C=
+TopDownCharacter_C="\"Object.MeleeRange\" \"Object.MeleeRange\" "
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -4138,7 +4216,7 @@ WeldedVertices=True
 MapSkeletalMotionToRoot=False
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [PathColor]
 /Game/Levels=(R=1.000000,G=0.457670,B=0.000000,A=1.000000)
@@ -4241,26 +4319,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MainMenu
-MRUItem1=/Game/TopDownBP/Interfaces/PlayerInt
-MRUItem2=/Game/TopDownBP/Blueprints/PlayerControl
-MRUItem3=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem4=/Game/AIAgent/BaseAI
-MRUItem5=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem0=/Game/AIAgent/BaseAI
+MRUItem1=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem2=/Game/AIAgent/BossAI
+MRUItem3=/Game/AIAgent/Proto_controller
+MRUItem4=/Game/Levels/Area2-MarketMeshStart
+MRUItem5=/Game/TopDownBP/Blueprints/TopDownCharacter
 MRUItem6=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem7=/Game/Levels/Area2-MarketMeshStart
-MRUItem8=/Game/AIAgent/Proto_controller
-MRUItem9=/Game/AIAgent/ProtoTree
-MRUItem10=/Game/Levels/Demo
-MRUItem11=/Game/TopDownBP/Blueprints/I_DeathSystem
-MRUItem12=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
-MRUItem13=/Game/Josh/Skinned_Player_Skeleton
-MRUItem14=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
-MRUItem15=/Game/Josh/TestRoom/Running_Anim
-MRUItem16=/Game/Josh/1HHumanIdleRun_BP
-MRUItem17=/Game/Josh/HumanAnimBP
-MRUItem18=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem19=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem7=/Game/Levels/Area1-Rework
+MRUItem8=/Game/Levels/MainMenu
+MRUItem9=/Game/TopDownBP/Interfaces/PlayerInt
+MRUItem10=/Game/TopDownBP/Blueprints/PlayerControl
+MRUItem11=/Game/TopDownBP/Blueprints/TopDownGameMode
+MRUItem12=/Game/AIAgent/ProtoTree
+MRUItem13=/Game/Levels/Demo
+MRUItem14=/Game/TopDownBP/Blueprints/I_DeathSystem
+MRUItem15=/Game/Josh/AnimationsTest/AttackMontages/Slash_Montage
+MRUItem16=/Game/Josh/Skinned_Player_Skeleton
+MRUItem17=/Game/Josh/AnimationsTest/AttackMontages/Heavy_Uppercut_Montage
+MRUItem18=/Game/Josh/TestRoom/Running_Anim
+MRUItem19=/Game/Josh/1HHumanIdleRun_BP
 
 [WidgetTemplatesExpanded]
 Extra=False
