--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -311,18 +311,11 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Levels/Area1-Rework
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/Widgets/Ability_Wheel.Ability_Wheel
-OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
-OpenAssetsAtExit=/Game/GW000979/DataStruct/BaseEquipment/BasePickup.BasePickup
-OpenAssetsAtExit=/Game/c024816h/BasePickUp.BasePickUp
-OpenAssetsAtExit=/Game/Sequence_1.Sequence_1
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3495,9 +3488,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
+Character="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
+Pawn="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -4530,18 +4523,18 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/Area1-Rework
-MRUItem1=/Game/Sequence_1
-MRUItem2=/Game/Levels/Area2-MarketMeshStart
-MRUItem3=/Game/Levels/Area2-Market
-MRUItem4=/Game/c024816h/BasePickUp
-MRUItem5=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
-MRUItem6=/Game/AIAgent/BossAI
-MRUItem7=/Game/Levels/MainMenu
-MRUItem8=/Game/AIAgent/Proto_controller
-MRUItem9=/Game/AIAgent/DerivedClasses/HoundEnemyAI
-MRUItem10=/Game/Widgets/Ability_Wheel
-MRUItem11=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/Levels/Area1-Rework
+MRUItem2=/Game/Sequence_1
+MRUItem3=/Game/Levels/Area2-MarketMeshStart
+MRUItem4=/Game/Levels/Area2-Market
+MRUItem5=/Game/c024816h/BasePickUp
+MRUItem6=/Game/GW000979/DataStruct/BaseEquipment/BasePickup
+MRUItem7=/Game/AIAgent/BossAI
+MRUItem8=/Game/Levels/MainMenu
+MRUItem9=/Game/AIAgent/Proto_controller
+MRUItem10=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem11=/Game/Widgets/Ability_Wheel
 MRUItem12=/Game/Movies/MainMenuFinal
 MRUItem13=/Game/Chloe/UI/Start_Menu
 MRUItem14=/Game/Movies/MenuMediaPlayer_Video
